--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,4 @@
 <div class="container text-center mt-5">
   <h1 style="color: var(--primary);">خوش اومدی به داشبورد!</h1>
-  <p class="lead mt-3">اینجا اطلاعات کاربران رو نمایش می‌دیم...</p>
-  <button class="btn btn-secondary mt-4">خروج</button>
+  <app-user></app-user>
 </div>
